--- a/index.html
+++ b/index.html
@@ -5,10 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">COMPANY<span class="yellow">LOGO</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <div class="jumbotron hero">
+        <div class="container">
+            <h1 class="display-4">Lorem, ipsum dolor.</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">READ MORE</a>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h2>We Provide Awesome Digital Services</h2>
+                <button type='button' class='btn btn-primary'>READ MORE</button  >
+            </div>
+            <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="#">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
+            </div>
+            <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="#">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
+            </div>
+            <div class="col-sm">
+                <img src="https://via.placeholder.com/150" alt="#">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container cta bg-dark">
+        <div class="row">
+            <div class="col-sm-2"> <img src="https://via.placeholder.com/100X100" alt="#"></div>
+            <div class="col-sm-8">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quia.</p>
+            </div>
+            <div class="col-sm-2"><a href="#">PURCHASE IT</a></div>
+        </div>
+    </div>
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
