--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Bootstrap Demo</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,25 +50,25 @@
                 <button type='button' class='btn btn-primary'>READ MORE</button  >
             </div>
             <div class="col-sm">
-                <img src="https://via.placeholder.com/150" alt="#">
+                <img src="https://via.placeholder.com/150" alt="Placeholder">
                 <h3>Lorem, ipsum.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
             </div>
             <div class="col-sm">
-                <img src="https://via.placeholder.com/150" alt="#">
+                <img src="https://via.placeholder.com/150" alt="Placeholder">
                 <h3>Lorem, ipsum.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
             </div>
             <div class="col-sm">
-                <img src="https://via.placeholder.com/150" alt="#">
+                <img src="https://via.placeholder.com/150" alt="Placeholder">
                 <h3>Lorem, ipsum.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, facilis.</p>
             </div>
         </div>
     </div>
-    <div class="container cta bg-dark">
+    <div class="container cta">
         <div class="row">
-            <div class="col-sm-2"> <img src="https://via.placeholder.com/100X100" alt="#"></div>
+            <div class="col-sm-2"> <img src="https://via.placeholder.com/100X100" alt="Placeholder"></div>
             <div class="col-sm-8">
                 <h3>Lorem ipsum dolor sit amet.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quia.</p>
@@ -76,7 +76,158 @@
             <div class="col-sm-2"><a href="#">PURCHASE IT</a></div>
         </div>
     </div>
-    
+    <div class="container works">
+        <div class="row">
+            <div class="col-sm-3">
+                <h4>Lorem ipsum dolor sit.</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container info">
+        <div class="row">
+            <div class="col-sm-6">
+                <img src='#' alt="Placeholder">
+            </div>
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6">Fully Responsive</div>
+                    <div class="col-sm-6"><ul>
+                        <li>Lorem, ipsum.</li>
+                        <li>Ab, enim.</li>
+                        <li>Veritatis, minima.</li>
+                        <li>Deserunt, voluptates!</li>
+                    </ul></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container news">
+        <div class="row">
+            <div class="col-sm-3">
+                <h4>Stay Tuned. Read Our News</h4>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+            <div class="col-sm-3">
+                <a href="#"><img src="#" alt="Placeholder"></a>
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem, ipsum.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container newletter">
+        <div class="row">
+            <div class="col-sm-8">
+                <img src="#" alt="Placeholder">
+                <h4><span>NEWS</span>LETTER</span></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, perferendis.</p>
+            </div>
+            <div class="col-sm-4">
+                <form action="#">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="container sponsors">
+        <div class="row">
+            <div class="col-sm"><img src="#" alt="Placeholder"></div>
+            <div class="col-sm"><img src="#" alt="Placeholder"></div>
+            <div class="col-sm"><img src="#" alt="Placeholder"></div>
+            <div class="col-sm"><img src="#" alt="Placeholder"></div>
+            <div class="col-sm"><img src="#" alt="Placeholder"></div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <a href="/">COMPANY<span class="yellow">LOGO</span></a>
+                </div>
+                <div class="col-sm-9">
+                    <p>WE PROVIDE AWESOME DIGITAL <span class="bold">SERVICES</span></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm">
+                            <h3>SAY HELLO</h3>
+                            <p>WE'D LOVE HEARING FROM YOU</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="row">
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                                <div class="col-sm"><a href="#"><img src="#" alt="Placeholder"></a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm">LATEST <span class="bold">POSTS</span></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm">CONTACT <span class="bold">INFO</span></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
