markup for footer added

--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link" href="#">Blog</a>>
+                <a class="nav-item nav-link" href="#">Contact</a>>
+                <a class="nav-item nav-link" href="#">Purchase</a>>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -202,13 +197,20 @@
                         <div class="col-sm">LATEST <span class="bold">POSTS</span></div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>Lorem, ipsum.<br>
+                            July 10, 2019</p>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>Lorem, ipsum.<br>July 10, 2019</p>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>Video post<br>July 10, 2019</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm">
@@ -216,17 +218,34 @@
                         <div class="col-sm">CONTACT <span class="bold">INFO</span></div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>Corporation, Inc.<br>123 Aolsom Ave, Suite 600, New York</p>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>(123) 456-7890<br>(123)098-7654</p>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm"></div>
+                        <div class="col-sm">
+                            <p>email@gmail.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="nav">
+                <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link" href="#">Blog</a>>
+                <a class="nav-item nav-link" href="#">Contact</a>>
+                <a class="nav-item nav-link" href="#">Purchase</a>>
+            </div>
+            <span class="navbar-text">&copy2019 Company - Built with Passion</span>
+        </nav>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
